Updated API, Refactoring
BE:
- Update .gitingore
- Updated volumes in docker-compose.yaml
- Added static resources
- Added logic for adding photos to Courts and Venues
- Added PhotoSavingException and logic for handling this exception
- Added MyFilesUtils class
- Updated 001-create-tables.yaml (liquibase)
- Updated CompanyInfoServiceTest, CourtBlockingServiceTest, CourtServiceTest

FE:
- Removed text from README.md
- Actualized api-docs.yaml
- Updated generated-api files
- Updated NavLinks
- Updated AboutUs
- Updated Contacts
- Updated Home
