# ReservationAppServer/src/main/java/cz/reservation/controller/CourtController.java
@@ -5,7 +5,9 @@ import cz.reservation.entity.filter.CourtFilter;
 import cz.reservation.service.serviceinterface.CourtService;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 
@@ -19,10 +21,12 @@ public class CourtController {
         this.courtService = courtService;
     }
 
-    @PostMapping
+    @PostMapping(consumes = {MediaType.MULTIPART_FORM_DATA_VALUE})
     @ResponseStatus(HttpStatus.CREATED)
-    public CourtDto createCourt(@RequestBody @Valid CourtDto courtDto) {
-        return courtService.createCourt(courtDto);
+    public CourtDto createCourt(
+            @RequestPart("court") @Valid CourtDto courtDto,
+            @RequestPart(name = "file", required = false) MultipartFile file) {
+        return courtService.createCourt(courtDto, file);
     }
 
     @GetMapping("/{id}")
@@ -41,9 +45,12 @@ public class CourtController {
         courtService.deleteCourt(id);
     }
 
-    @PutMapping("/{id}")
+    @PutMapping(value = "/{id}", consumes = {MediaType.MULTIPART_FORM_DATA_VALUE})
     @ResponseStatus(HttpStatus.NO_CONTENT)
-    public void editCourt(@Valid @RequestBody CourtDto courtDto, @PathVariable Long id) {
-        courtService.editCourt(courtDto, id);
+    public void editCourt(
+            @Valid @RequestPart("court") CourtDto courtDto,
+            @PathVariable Long id,
+            @RequestPart(name = "file", required = false) MultipartFile file) {
+        courtService.editCourt(courtDto, id, file);
     }
 }
